@@ -1,0 +1,20 @@
+-----BEGIN CERTIFICATE-----
+MIIDLjCCAtSgAwIBAgIBDzAKBggqhkjOPQQDAjCBgTELMAkGA1UEBhMCREUxHzAd
+BgNVBAoMFmdlbWF0aWsgR21iSCBOT1QtVkFMSUQxNDAyBgNVBAsMK1plbnRyYWxl
+IFJvb3QtQ0EgZGVyIFRlbGVtYXRpa2luZnJhc3RydWt0dXIxGzAZBgNVBAMMEkdF
+TS5SQ0EzIFRFU1QtT05MWTAeFw0xNzA4MzAxMTI5NDZaFw0yNTA4MjgxMTI5NDVa
+MIGZMQswCQYDVQQGEwJERTEfMB0GA1UECgwWZ2VtYXRpayBHbWJIIE5PVC1WQUxJ
+RDFIMEYGA1UECww/SW5zdGl0dXRpb24gZGVzIEdlc3VuZGhlaXRzd2VzZW5zLUNB
+IGRlciBUZWxlbWF0aWtpbmZyYXN0cnVrdHVyMR8wHQYDVQQDDBZHRU0uU01DQi1D
+QTkgVEVTVC1PTkxZMFowFAYHKoZIzj0CAQYJKyQDAwIIAQEHA0IABDl29orp+5hm
+h0nahzfdXkNEtLJOBM0EhdsSuzZneO9YC4LPphTsSDtnmmIvL14MPjRchAVnS7t2
+P201ZLB46uKjggEgMIIBHDAdBgNVHQ4EFgQUYoiaxN78o/OTOcufkOcTmj2JzHUw
+HwYDVR0jBBgwFoAUB5AzLXVTXn/4yDe/fskmV2jfONIwQgYIKwYBBQUHAQEENjA0
+MDIGCCsGAQUFBzABhiZodHRwOi8vb2NzcC5yb290LWNhLnRpLWRpZW5zdGUuZGUv
+b2NzcDASBgNVHRMBAf8ECDAGAQH/AgEAMA4GA1UdDwEB/wQEAwIBBjAVBgNVHSAE
+DjAMMAoGCCqCFABMBIEjMFsGA1UdEQRUMFKgUAYDVQQKoEkMR2dlbWF0aWsgR2Vz
+ZWxsc2NoYWZ0IGbDvHIgVGVsZW1hdGlrYW53ZW5kdW5nZW4gZGVyIEdlc3VuZGhl
+aXRza2FydGUgbWJIMAoGCCqGSM49BAMCA0gAMEUCIQCO/4FwK52TRw3ALkBvCZSS
+AH1qpyh0Uis/zBBoB892MgIgKxDgOxqvlTtAHzYUO0BkHSPXiXKDurXV3xsmQDLV
+cYE=
+-----END CERTIFICATE-----
