@@ -97,14 +97,19 @@ data class CertificateDataDER(
         )
     }
 
-    val ocspResponderURL: String by lazy {
+    val ocspResponderURL: String? by lazy {
         var certHolder = X509CertificateHolder(Base64.decode(base64String))
 
         val aiaExtension = AuthorityInformationAccess.fromExtensions(certHolder.extensions)
-        Arrays.stream(aiaExtension.getAccessDescriptions())
-            .filter { ad -> ad.accessMethod.equals(X509ObjectIdentifiers.id_ad_ocsp) }
-            .map { ad -> ad.getAccessLocation().getName().toASN1Primitive().toString() }
-            .findFirst().get()
+
+        if (aiaExtension != null && aiaExtension.accessDescriptions != null) {
+            aiaExtension.accessDescriptions.asSequence()
+                .filter { ad -> ad.accessMethod == X509ObjectIdentifiers.id_ad_ocsp }
+                .map { ad -> ad.accessLocation.name }
+                .first().toASN1Primitive().toString()
+        } else {
+            null
+        }
     }
 }
 
